# gmml

./: .clang-format  .clang-tidy  .gitignore  AtomTest.cc  CMakeLists.txt  Doxyfile-Frost  GMML_Log.txt  Makefile  Makefile-main  README  README.md  funding.md  gmml-refactoring  gmml-refactoring.pro  gmml.i  groups.dox  main.cc  main.cc~  make.sh  prep  runningClangWorkaround.sh  updateCmakeFileList.sh
.github/workflows/: cmake.yml
.hooks/: pre-commit  pre-push
.hooks/pre-commit.d/: pre-commit.tests.sh
.hooks/pre-push.d/: pre-push.tests.sh
DOXY_DOCUMENTS/def/: doxygen.def
DOXY_DOCUMENTS/html/: annotated.html  annotated.js  classes.html  dir_000001_000005.html  dir_000002_000005.html  dir_000003_000005.html  dir_000007_000001.html  dir_000007_000005.html  dir_000007_000008.html  dir_000008_000005.html  dir_000009_000005.html  dir_000012_000001.html  dir_000012_000008.html  dir_000013_000001.html  dir_000013_000008.html  dir_000015_000000.html  dir_000016_000000.html  dir_000017_000000.html  dir_000018_000000.html  dir_000019_000000.html  dir_000020_000000.html  dir_000021_000000.html  dir_000022_000000.html  dir_000023_000000.html  dir_000024_000000.html  dir_000025_000000.html  dir_000026_000000.html  dir_000027_000000.html  dir_01c834f7c6aec76be121c7552f8c0e09.html  dir_01c834f7c6aec76be121c7552f8c0e09_dep.map  dir_01c834f7c6aec76be121c7552f8c0e09_dep.md5  dir_04e56ff7c55dbbe9e9037aca40bb3349.html  dir_04e56ff7c55dbbe9e9037aca40bb3349_dep.map  dir_04e56ff7c55dbbe9e9037aca40bb3349_dep.md5  dir_051eb371a6d8663bb274d8c4d1292c1b.html  dir_051eb371a6d8663bb274d8c4d1292c1b_dep.map  dir_051eb371a6d8663bb274d8c4d1292c1b_dep.md5  dir_0a90b167914752edee8a62869816d9e3.html  dir_0a90b167914752edee8a62869816d9e3_dep.map  dir_0a90b167914752edee8a62869816d9e3_dep.md5  (+441 more)
Doxygen/: Build_Doxygen_Docs.bash  Doxyfile  USAGE.md  groups.dox
TestCases/: AtomTest.cc  AtomnodeTest.cc  CoordinateTest.cc  ElementTest.cc  GridTest.cc  MolecularDynamicAtomTest.cc  MolecularGraphTest.cc  ResidueTest.cc  SolventTest.cc  SolventTest.cc~  SolventTest.cpp  TopologyTest.cc
cmakeFileLists/: cFileList.txt  externalHDirectoryList.txt  hDirectoryList.txt
dat/: README
dat/Atomic/: NIST_Atomic_Weights_and_Isotopic_Compositions_for_All_Elements.html
dat/CurrentParams/: leaprc_GLYCAM_06j-1_2014-03-14.tgz
dat/MolecularMetadata/: README
dat/frcmod/: frcmod.ff14SB_MOD
dat/prep/: GLYCAM_06j-1_GAGS.prep  GLYCAM_06j-1_GAGS_KDN.prep  Glycam_06.prep
doc/: Build_Doxygen_Docs.bash  Doxyfile-Frost  DoxygenLayout.xml  Overview.dox
example/: 1NXC.pdb~  1NXC_updated.pdb~  1Z7E-Mod.pdb~  1Z7E_updated.pdb~  OME-0OB.parm7  ROH-3OB-3OB-3OB-0OB.parm7  TBT-0GA.parm7  TBT-0OA.parm7
example/parm7/: ROH-0LA.parm7  ROH-0LB.parm7  ROH-0OA.parm7  ROH-3OA-3OA-3OA-0OA.parm7  ROH-3OA-3OB-3OA-0OB.parm7  ROH-4MA-4GA-4MB-0GA.parm7  structure-2.parm7  test.parm7
example/rst7/: OME-0OB.rst7  ROH-0LA.rst7
hooks/: README  pre-commit
hooks/pre-commit.d/: pre-commit.tests.sh
includes/: common.hpp  generictypedefs.hpp  gmml.hpp  structures.hpp  superimposition.hpp  utils.hpp
includes/Abstract/: absAtom.hpp  absBuilder.hpp  absResidue.hpp  builder.hpp  residue.hpp
includes/CentralDataStructure/: assembly.hpp  atom.hpp  cdsAssembly.hpp  cdsAtom.hpp  cdsCoordinate.hpp  cdsEnsemble.hpp  cdsFunctions.hpp  cdsMolecule.hpp  cdsResidue.hpp  cdsSelections.hpp  coordinate.hpp  ensemble.hpp  molecule.hpp  residue.hpp
includes/CodeUtils/: biology.hpp  codetests.hpp  constants.hpp  directories.hpp  files.hpp  logging.hpp  metropolisCriterion.hpp  numbers.hpp  string.hpp  strings.hpp  templatedSelections.hpp  threads.hpp
includes/Eigen_Algebra_Template_Library/: Geometry
includes/Geometry/: cell.hpp  coordinate.hpp  grid.hpp  plane.hpp
includes/GeometryTopology/: angle.hpp  cell.hpp  coordinate.hpp  dihedral.hpp  distance.hpp  geometrytopology.hpp  grid.hpp  plane.hpp  rotation.hpp
includes/Glycam/: chemicalcode.hpp  monosaccharide.hpp  oligosaccharide.hpp  sugarname.hpp
includes/Glycan/: chemicalcode.hpp  glycosidiclinkage.hpp  monosaccharide.hpp  note.hpp  oligosaccharide.hpp  ontologyGmmlInterface.hpp  ontologyvocabulary.hpp  sugarname.hpp
includes/InternalPrograms/: functionsForGMML.hpp  glycosylationSiteFinder.hpp  io.hpp  metropolisCriterion.hpp
includes/MolecularMetadata/: README  amberelements.hpp  atomicBonds.hpp  element.hpp  elementattributes.hpp  glycam06.hpp  glycoprotein.hpp  (+4 more)
internalPrograms/: convertPdbToGlycam.cpp  createGlycosylationTables.cpp
lib/: README
programs/: README  make-versions-file.bash
project_management/: GMML.html  GMML.planner  Smart_Pointers.planner  project_template.planner
scripts/: toolingWorkarounds.sh  updateCmakeFileList.sh
src/: iterated_maps.git-ignore-me  superimposition.cpp
test-main/: README  compile_run_tests.bash  main.cc  main1.cc
tests/: 000.test.buildBySequence.sh  000.test.buildBySequenceOldWay.sh  001.test.buildBySequenceMetaWay.sh  002.test.createAssemblyWritePDB.sh  003.test.SuperimpositionEigen.sh  004.test.PDBpreprocessor.sh  005.test.Overlaps.sh  006.test.BFMP-RingShapeCalculation.sh  007.test.DetectSugars.sh  008.test.PDB2GlycamAndSubgraphMatching.sh  009.test.Reorder_and_Label_Sequence.sh  010.output_buildBySequenceRotamer.txt  010.test-disabled.buildBySequenceRotamer.sh  010.test.buildBySequenceRotamer.sh  010.test.buildBySequenceRotamers.sh  010.test.readJSON.sh  011.test.writeResNumbers.sh  012.test.AddSolventNeutralize.sh  013.output_buildOligosaccharideLibrary.txt  013.test.buildOligoaccharideLibrary.sh  014.test.SequenceParser.sh  015.test.SequenceToAssembly.sh  016.test.DrawGlycan.sh  017.test.GlycoproteinBuilder.sh  018.test.GlycoproteinBuilderTable.sh  019.test.newPDBClass.sh  020.test.parameterFiles.sh  021.test.cdsSequence.sh  022.test.libraryFileReader.sh  023.test.carbohydrateBuilder.sh  024.test.wiggleToSite.sh  025.test.ReorderLabelSequence.sh  026.test.editPdbFile.sh  027.test.glycamResidueCombinator.sh  028.test.cdsCarbBuilderAll.sh  029.test.graph.sh  PDBPreprocessor  PDB_preprocessor  README  Reordered_Labeled_Sequences.txt  (+19 more)
(+4415 files in other folders)
